k8s/services-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service-lb
  namespace: inovatech
spec:
  type: LoadBalancer
  selector:
    app: products-service
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: orders-service-lb
  namespace: inovatech
spec:
  type: LoadBalancer
  selector:
    app: orders-service
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
